--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,9 @@ inputs:
     description: 'A static description to include at the top of the generated README file'
     required: false
     default: ''
+  github_token:
+    description: "GitHub token for committing changes and deploying to GitHub Pages."
+    required: true
 runs:
   using: "composite"
   steps:
@@ -113,5 +116,5 @@ runs:
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ inputs.github_token }}
         publish_dir: .
