--- a/action.yml
+++ b/action.yml
@@ -29,6 +29,7 @@ runs:
       uses: actions/checkout@v3
 
     - name: Install Dependencies
+      shell: bash
       run: |
         sudo apt-get update
         sudo apt-get install -y wget curl python3 jq
