--- a/action.yml
+++ b/action.yml
@@ -37,9 +37,7 @@ runs:
     - name: Write Artifacts JSON to File
       shell: bash
       run: |
-        echo "${{ inputs.artifacts }}" > artifacts.json
-        # Strip leading whitespace from each line
-        sed -i 's/^[ \t]*//' artifacts.json
+        printf '%s\n' "${{ inputs.artifacts }}" > artifacts.json
         echo "Artifacts JSON:"
         cat artifacts.json
 
