Revert "Update action.yml"
This reverts commit 9215fd5f14185e8761ee188a95ac28e51899eafc.

--- a/action.yml
+++ b/action.yml
@@ -37,7 +37,9 @@ runs:
     - name: Write Artifacts JSON to File
       shell: bash
       run: |
-        printf '%s\n' "${{ inputs.artifacts }}" > artifacts.json
+        echo "${{ inputs.artifacts }}" > artifacts.json
+        # Strip leading whitespace from each line
+        sed -i 's/^[ \t]*//' artifacts.json
         echo "Artifacts JSON:"
         cat artifacts.json
 
