--- a/action.yml
+++ b/action.yml
@@ -37,10 +37,9 @@ runs:
     - name: Write Artifacts JSON to File
       shell: bash
       run: |
-        echo "${{ inputs.artifacts }}"
-        echo "${{ inputs.artifacts }}" > artifacts.json
-        # Strip leading whitespace from each line
-        sed -i 's/^[ \t]*//' artifacts.json
+        # Preserve correct JSON formatting
+        printf '%s' "${{ inputs.artifacts }}" | jq '.' > artifacts.json || exit 1
+    
         echo "Artifacts JSON:"
         cat artifacts.json
 
