--- a/action.yml
+++ b/action.yml
@@ -34,16 +34,12 @@ runs:
         sudo apt-get update
         sudo apt-get install -y wget curl python3 jq
 
-    - name: Debug File Existence
+    - name: Debug Check Scripts Directory
       shell: bash
       run: |
+        echo "Checking if scripts directory exists..."
+        ls -la
         ls -la scripts/
-        if [ -f "scripts/handle_artifact.sh" ]; then
-          echo "handle_artifact.sh exists and is ready to run."
-        else
-          echo "Error: handle_artifact.sh not found!"
-          exit 1
-        fi
 
     - name: Write Artifacts JSON to File
       shell: bash
