--- a/action.yml
+++ b/action.yml
@@ -27,6 +27,8 @@ runs:
   steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
+      with:
+        sparse-checkout: action.yml scripts/
 
     - name: Install Dependencies
       shell: bash
