--- a/action.yml
+++ b/action.yml
@@ -25,24 +25,14 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
     - name: Checkout Action Repository
       uses: actions/checkout@v4
       with:
-        repository: ${{ github.repository }} # Ensures the action repo is checked out
-        path: action_repo # Checkout into a subdirectory
-
-    - name: Debug List Files in Repository
-      shell: bash
-      run: |
-        echo ${{ github.repository }}
-        echo "Current directory:"
-        pwd
-        echo "Listing root contents:"
-        ls -la
-        echo "Listing action_repo directory:"
-        ls -la action_repo/ || echo "action_repo/ directory not found!"
-        echo "Listing scripts directory:"
-        ls -la action_repo/scripts/ || echo "action_repo/scripts/ directory not found!"
+        repository: annabarnes1138/web-archiver-action
+        path: action_repo
 
     - name: Install Dependencies
       shell: bash
