--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     },
     "dependencies": {
       "@actions/core": "^1.10.0"
+    },
+    "devDependencies": {
+    "@vercel/ncc": "^0.36.0"
     }
   }
