--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,9 +51,36 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Get latest tag
-        id: get_version
-        run: echo "TAG_NAME=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
+      - name: Auto-Increment Version Tag
+        id: tag_version
+        run: |
+          # Get the latest tag (if none, default to v1.0.0)
+          LATEST_TAG=$(git tag --sort=-v:refname | head -n 1)
+          if [ -z "$LATEST_TAG" ]; then
+            NEW_TAG="v1.0.0"
+          else
+            # Extract major, minor, and patch numbers
+            MAJOR=$(echo $LATEST_TAG | cut -d. -f1 | tr -d 'v')
+            MINOR=$(echo $LATEST_TAG | cut -d. -f2)
+            PATCH=$(echo $LATEST_TAG | cut -d. -f3)
+            
+            # Increment the patch version (e.g., v1.0.0 → v1.0.1)
+            PATCH=$((PATCH + 1))
+            NEW_TAG="v${MAJOR}.${MINOR}.${PATCH}"
+          fi
+
+          echo "New tag: $NEW_TAG"
+
+          # Configure Git
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+
+          # Create and push the new tag
+          git tag -a $NEW_TAG -m "Automated release $NEW_TAG"
+          git push origin $NEW_TAG
+
+          # Expose the new tag as an environment variable
+          echo "TAG_NAME=$NEW_TAG" >> $GITHUB_ENV
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
