--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,8 +54,11 @@ jobs:
       - name: Auto-Increment Version Tag
         id: tag_version
         run: |
-          # Get the latest tag (if none, default to v1.0.0)
-          LATEST_TAG=$(git tag --sort=-v:refname | head -n 1)
+          # Fetch tags from remote
+          git fetch --tags
+
+          # Get the latest tag (if none, start at v1.0.0)
+          LATEST_TAG=$(git tag --sort=-v:refname | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | tail -n 1)
           if [ -z "$LATEST_TAG" ]; then
             NEW_TAG="v1.0.0"
           else
@@ -75,7 +78,12 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
 
-          # Create and push the new tag
+          # Create and push the new tag (ensuring it does not already exist)
+          if git rev-parse "$NEW_TAG" >/dev/null 2>&1; then
+            echo "Tag $NEW_TAG already exists. Exiting."
+            exit 1
+          fi
+
           git tag -a $NEW_TAG -m "Automated release $NEW_TAG"
           git push origin $NEW_TAG
 
