--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,22 +54,27 @@ jobs:
       - name: Auto-Increment Version Tag
         id: tag_version
         run: |
-          # Fetch tags from remote
+          # Fetch all tags from remote
           git fetch --tags
 
-          # Get the latest tag (if none, start at v1.0.0)
-          LATEST_TAG=$(git tag --sort=-v:refname | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | tail -n 1)
+          # Get latest semantic version tag
+          LATEST_TAG=$(git tag --list 'v[0-9]*' --sort=-v:refname | head -n 1)
           if [ -z "$LATEST_TAG" ]; then
             NEW_TAG="v1.0.0"
           else
-            # Extract major, minor, and patch numbers
-            MAJOR=$(echo $LATEST_TAG | cut -d. -f1 | tr -d 'v')
-            MINOR=$(echo $LATEST_TAG | cut -d. -f2)
-            PATCH=$(echo $LATEST_TAG | cut -d. -f3)
-            
-            # Increment the patch version (e.g., v1.0.0 → v1.0.1)
+            # Extract version numbers (handling 'v' prefix)
+            VERSION_NUM=$(echo $LATEST_TAG | sed 's/v//')
+            IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION_NUM"
+
+            # Increment patch version (e.g., v1.0.0 → v1.0.1)
             PATCH=$((PATCH + 1))
             NEW_TAG="v${MAJOR}.${MINOR}.${PATCH}"
+
+            # Ensure the new tag does not already exist
+            while git rev-parse "$NEW_TAG" >/dev/null 2>&1; do
+              PATCH=$((PATCH + 1))
+              NEW_TAG="v${MAJOR}.${MINOR}.${PATCH}"
+            done
           fi
 
           echo "New tag: $NEW_TAG"
@@ -78,12 +83,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
 
-          # Create and push the new tag (ensuring it does not already exist)
-          if git rev-parse "$NEW_TAG" >/dev/null 2>&1; then
-            echo "Tag $NEW_TAG already exists. Exiting."
-            exit 1
-          fi
-
+          # Create and push the new tag
           git tag -a $NEW_TAG -m "Automated release $NEW_TAG"
           git push origin $NEW_TAG
 
@@ -95,7 +95,7 @@ jobs:
         with:
           tag_name: ${{ env.TAG_NAME }}
           name: "Release ${{ env.TAG_NAME }}"
-          generate_release_notes: true  # Auto-generate release notes from commit history
+          generate_release_notes: true
           draft: false
           prerelease: false
           files: dist/*
